# rust-book

closure-coding-prac/: Cargo.toml
closure-coding-prac/src/: main.rs
closures/: Cargo.toml
closures/src/: main.rs
common_collections/src/: main.rs
common_prog_concepts/: Cargo.toml
common_prog_concepts/src/: main.rs
csv-reader/: Cargo.toml  example.csv  output.csv  uspop.csv
csv-reader/src/: main.rs
dabba-smart-pointers/: Cargo.toml
dabba-smart-pointers/src/: lib.rs  main.rs
data_structures_rust/: Cargo.toml
data_structures_rust/src/: lib.rs  main.rs
enums_structs_exercise/: Cargo.toml
enums_structs_exercise/src/: main.rs
errors/src/: main.rs
guessing_game/src/: main.rs
iterators/src/: main.rs
linked-list/src/: lib.rs
mini-grep-v1/: .env  Cargo.toml  hello.txt
mini-grep-v1/src/: lib.rs  main.rs
mini_grep/src/: another_text.txt  lib.rs  main.rs
modules_crates_stuff/: Cargo.toml
modules_crates_stuff/src/: lib.rs  main.rs
modules_crates_stuff/src/garden/: mod.rs
mutex/src/: main.rs
ownership/src/: main.rs
result_options/: Cargo.toml
result_options/src/: main.rs
rust-graphql-api/: .env  Cargo.toml
rust-graphql-api/src/: main.rs
rust-graphql-api/src/config/: mongo.rs
rust-graphql-api/src/handler/: graphql_handler.rs
rust-postgres/: Cargo.toml
rust-postgres/src/: main.rs
structs/src/: main.rs
tcp-server/: 404.html
tcp-server/src/: lib.rs
threads/src/: main.rs
traits_and_generics/src/: main.rs
