[package]
name = "rust-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sql_query_builder = { version = "1.x.x", features = ["postgresql"] }
sqlx = { version = "0.7.1" , features = ["runtime-tokio-rustls","postgres"] }
tokio = { version = "1", features = ["full"] }
